# Hackathon-2025

./: README.md  pyproject.toml
Root Directory/: Input.html  Output.html  index.html  style.css
ScamDetective/: db.sqlite3  manage.py  newKeywords.txt  newPhrases.txt
ScamDetective/ScamDetective/: asgi.py  settings.py  urls.py  wsgi.py
ScamDetective/core/: models.py  urls.py  views.py
ScamDetective/core/management/commands/: __init__.py  addKeywords.py  addPhrases.py
ScamDetective/core/migrations/: 0001_initial.py  0002_countrycodes.py  0003_admin_rename_countrycodes_countrycode.py  0004_phrase_keyword_socre.py  0005_rename_socre_keyword_score.py
ScamDetective/core/static/: style.css
ScamDetective/core/templates/core/: Input.html  Output.html  index.html  making_entries.html
