[tool.poetry]
name = "hackathon-2025"
version = "0.1.0"
description = "Scam Detective"
authors = ["Scott-Jeppson <sfjepp46@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
